Adding VM arguments